--- a/index.css
+++ b/index.css
@@ -32,3 +32,134 @@ body {
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 14px;
 }
+
+.mediapreview {
+    position: relative;
+    display: flex;
+    flex-direction: nowrap;
+    align-items: center;
+    justify-content: center;
+    top: 10px;
+    border-radius: 14px;
+    height: 500px;
+    background: white;
+}
+
+.mediapreview > div {
+    position: absolute;
+    display: block;
+    height: 300px;
+    width: 150px;
+    border-radius: 16px;
+    overflow: hidden;
+    object-fit: cover;
+    z-index: 0;
+}
+
+.mediapreview > div img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 14px;
+}
+
+.mediapreview > span.mediaketonal {
+  position: relative;          /* above all images */
+  z-index: 1;
+  color: white;                /* base color */
+  mix-blend-mode: difference;  /* invert on light bg */
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 500;
+  font-size: 48px;
+  letter-spacing: 20px;
+  user-select: none;
+}
+/*.mediaketonal {
+    font-family: Roboto Condensed, sans-serif;
+    font-size: 48px;
+    font-weight: 500;
+    letter-spacing: 20px;
+    z-index: 1;
+    color: rgb(0, 0, 0);
+    mix-blend-mode: difference;
+} */
+
+.media1 {
+    position: absolute;
+    display: block;
+    height: 300px;
+    width: 150px;
+    border-radius: 16px;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+.media2 {
+    position: absolute;
+    display: block;
+    height: 300px;
+    width: 150px;
+    border-radius: 16px;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+.media3 {
+    position: absolute;
+    display: block;
+    height: 300px;
+    width: 150px;
+    border-radius: 16px;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+.media4 {
+    position: absolute;
+    display: block;
+    height: 300px;
+    width: 150px;
+    border-radius: 16px;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+.media5 {
+    position: absolute;
+    display: block;
+    height: 300px;
+    width: 150px;
+    border-radius: 16px;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+.media6 {
+    position: absolute;
+    display: block;
+    height: 300px;
+    width: 150px;
+    border-radius: 16px;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+.media7 {
+    position: absolute;
+    display: block;
+    height: 300px;
+    width: 150px;
+    border-radius: 16px;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+.media8 {
+    position: absolute;
+    display: block;
+    height: 300px;
+    width: 150px;
+    border-radius: 16px;
+    overflow: hidden;
+    object-fit: cover;
+}
