--- a/index.css
+++ b/index.css
@@ -8,6 +8,9 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     border-radius: 14px;
+    position: fixed;
+    z-index: 2;
+    width: 100%;
     
 }
 
@@ -33,23 +36,27 @@ body {
     border-radius: 14px;
 }
 
+#scroll-block {
+    height: 1500px;
+    position: relative;
+}
+
 .mediapreview {
     position: relative;
     display: flex;
     flex-direction: nowrap;
-    align-items: center;
+    align-items:center;
     justify-content: center;
     top: 10px;
     border-radius: 14px;
     height: 500px;
     background: white;
+    position: sticky;
 }
 
 .mediapreview > div {
     position: absolute;
     display: block;
-    height: 300px;
-    width: 150px;
     border-radius: 16px;
     overflow: hidden;
     object-fit: cover;
@@ -74,61 +81,80 @@ body {
   letter-spacing: 20px;
   user-select: none;
 }
-/*.mediaketonal {
-    font-family: Roboto Condensed, sans-serif;
-    font-size: 48px;
-    font-weight: 500;
-    letter-spacing: 20px;
-    z-index: 1;
-    color: rgb(0, 0, 0);
-    mix-blend-mode: difference;
-} */
 
 .media1 {
     position: absolute;
     display: block;
-    height: 300px;
-    width: 150px;
+    height: 0px;
+    width: 0px;
     border-radius: 16px;
     overflow: hidden;
     object-fit: cover;
+    animation: move3 ease-out forwards;
+    animation-timeline: scroll(root block);
+}
+
+@keyframes move1 {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(200px); height: 300px; width: 150px; }
+}
+
+@keyframes move2 {
+    0% { transform: translateX(0); }
+    100% { transform: translate(-300px, 150px); width: 300px; height: 300px; }
+}
+
+@keyframes move3 {
+    0% { transform: translateX(0); opacity: 1;}
+    100% { width: 100%; height: 100%; opacity: 0.3;}
 }
 
 .media2 {
     position: absolute;
     display: block;
-    height: 300px;
-    width: 150px;
+    height: 0px;
+    width: 0px;
     border-radius: 16px;
     overflow: hidden;
     object-fit: cover;
+    animation: move2 ease-in forwards;
+    animation-timeline: scroll(root block);
 }
 
 .media3 {
     position: absolute;
     display: block;
-    height: 300px;
-    width: 150px;
+    height: 0px;
+    width: 0px;
     border-radius: 16px;
     overflow: hidden;
     object-fit: cover;
+    animation: move1 cubic-bezier(.19,.45,.62,1) forwards;
+    animation-timeline: scroll(root block);
+}
+
+@keyframes move4 {
+    0% { transform: translateX(0); opacity: 1; width: 0px;}
+    100% { width: 300px; height: 20px; opacity: 0.7; transform: translate(-300px, -20px);}
 }
 
 .media4 {
     position: absolute;
     display: block;
-    height: 300px;
-    width: 150px;
+    height: 0px;
+    width: 0px;
     border-radius: 16px;
     overflow: hidden;
     object-fit: cover;
+    animation: move4 ease-out forwards;
+    animation-timeline: scroll(root block);
 }
 
 .media5 {
     position: absolute;
     display: block;
-    height: 300px;
-    width: 150px;
+    height: 0px;
+    width: 0px;
     border-radius: 16px;
     overflow: hidden;
     object-fit: cover;
@@ -137,8 +163,8 @@ body {
 .media6 {
     position: absolute;
     display: block;
-    height: 300px;
-    width: 150px;
+    height: 0px;
+    width: 0px;
     border-radius: 16px;
     overflow: hidden;
     object-fit: cover;
@@ -147,8 +173,8 @@ body {
 .media7 {
     position: absolute;
     display: block;
-    height: 300px;
-    width: 150px;
+    height: 0px;
+    width: 0px;
     border-radius: 16px;
     overflow: hidden;
     object-fit: cover;
@@ -157,8 +183,8 @@ body {
 .media8 {
     position: absolute;
     display: block;
-    height: 300px;
-    width: 150px;
+    height: 0px;
+    width: 0px;
     border-radius: 16px;
     overflow: hidden;
     object-fit: cover;
