--- a/index.css
+++ b/index.css
@@ -2,21 +2,34 @@
 /*Created by GiMaker and snaplk*/
 
 .header {
-    background: linear-gradient(334deg, rgba(252, 252, 255, 1) 0%, rgba(219, 219, 219, 1) 51%, rgba(252, 252, 255, 1) 100%);
+    background-color: rgba(255, 255, 255, 0.783);
+    backdrop-filter: blur(10px);
     padding-left: 10px;
     height: fit-content;
     justify-content: space-between;
+    align-items: center;
     text-align: center;
     font-size: 24px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     border-radius: 14px;
-    position: sticky;
+    position: fixed;
     z-index: 2;
     width: 90%;
     top: 2%;
-    margin: 0 auto;
+    left: 5%;
+    border: white 1px solid;
+}
 
+.header::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 14px;
+    z-index: -1;
+    box-shadow:
+        inset 6px 6px 0px -6px rgba(255, 255, 255, 0.7),
+        inset 0 0 8px 1px rgba(255, 255, 255, 0.7);
 }
 
 .ipbox {
@@ -254,7 +267,7 @@ body {
     position: relative;
     top: 20px;
     padding: 20px;
-    background-color: #f8f9fa;
+    background-color: #ffffff;
     border-radius: 14px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -297,7 +310,7 @@ hr.solid {
 
 .logo {
     font-family: "Archivo Black", sans-serif;
-    font-weight: 700;
+    font-weight: 500;
     font-size: 1.3rem;
     color: #969696;
     user-select: none;
@@ -305,8 +318,10 @@ hr.solid {
 }
 
 .logo-img {
-    height: auto;
+    height: 40px;
     width: 40px;
+    position: relative;
+    top: 2px;
 }
 
 .disclaimer {
