--- a/index.css
+++ b/index.css
@@ -23,12 +23,14 @@ body {
 }
 
 .container {
-    margin-left: 20px;
-    margin-right: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     height: fit-content;
-    Display: flex;
+    display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
 }
 
 .background-video {
@@ -56,9 +58,9 @@ body {
     border-radius: 14px;
     position: fixed;
     z-index: 2;
-    width: 90%;
+    width: calc(100% - 80px); /* теперь не едет при смене размера */
+    left: 40px; 
     top: 2%;
-    left: 5%;
     border: white 1px solid;
 }
 
@@ -117,7 +119,7 @@ body {
     left: 0;
     width: 0;
     height: 2px;
-    background-color: #5865F2;
+    background-color: #58f2d6;
     transition: width 0.3s ease;
 }
 
@@ -174,7 +176,7 @@ body {
 
 .main-content {
     padding-top: 100px;
-    width: 95%;
+    width: 100%;
     margin: 0 auto;
     align-items: center;
     position: relative;
@@ -185,7 +187,8 @@ body {
 .hero-section {
     align-items: center;
     text-align: center;
-    padding: 60px 0;
+/*    padding: 60px 0; */
+    top: 50%; /* На меньших устройствах было ниже чем должно быть */
     border-radius: 18px;
     color: white;
     margin-bottom: 40px;
@@ -252,7 +255,7 @@ body {
     transform: translateX(-50%);
     width: 80px;
     height: 4px;
-    background: linear-gradient(to right, #5865F2, #6a5acd);
+    background: linear-gradient(to right, #19bb9d, #09a185);
     border-radius: 2px;
 }
 
@@ -657,7 +660,7 @@ hr.solid {
 }
 
 .success .copy-icon {
-    background: #10b981;
+    background: #19bb9d;
     transform: scale(1.1);
 }
 
@@ -728,7 +731,7 @@ hr.solid {
 .glass-card i {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #5865F2;
+    color: #19bb9d;
 }
 
 .glass-card h3 {
@@ -756,7 +759,7 @@ hr.solid {
     top: 0;
     bottom: 0;
     width: 4px;
-    background: linear-gradient(to bottom, #5865F2, #6a5acd);
+    background: linear-gradient(to bottom, #1ea28a, #5acd9f);
     transform: translateX(-50%);
     z-index: 1;
 }
@@ -810,14 +813,14 @@ hr.solid {
     left: -30px;
     width: 30px;
     height: 2px;
-    background: #5865F2;
+    background: #19bb9d;
     box-shadow: inset 6px 6px 0px -6px rgba(255, 255, 255, 0.7),
     inset 0 0 8px 1px rgba(255, 255, 255, 0.7);
 }
 
 
 .timeline-item h3 {
-    color: #5865F2;
+    color: #19bb9d;
     margin-bottom: 15px;
     font-size: 1.4rem;
 }
@@ -887,7 +890,7 @@ hr.solid {
 }
 
 .timeline-dot.active {
-    background: #5865F2;
+    background: #19bb9d;
     transform: scale(1.3);
     border: white 3px solid;
 }
@@ -920,7 +923,7 @@ hr.solid {
 
 .progress {
     height: 100%;
-    background: #5865F2;
+    background: #19bb9d;
     width: 0%;
     transition: width 0.3s ease;
 }
