--- a/index.css
+++ b/index.css
@@ -118,7 +118,7 @@ body {
     bottom: 0;
     left: 0;
     width: 0;
-    height: 2px;
+    height: 3px;
     background-color: #58f2d6;
     transition: width 0.3s ease;
 }
@@ -255,7 +255,7 @@ body {
     transform: translateX(-50%);
     width: 80px;
     height: 4px;
-    background: linear-gradient(to right, #19bb9d, #09a185);
+    background: linear-gradient(to right, #19bbbb, #19bbbb);
     border-radius: 2px;
 }
 
@@ -731,7 +731,7 @@ hr.solid {
 .glass-card i {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #19bb9d;
+    color: #19bbbb;
 }
 
 .glass-card h3 {
@@ -759,7 +759,7 @@ hr.solid {
     top: 0;
     bottom: 0;
     width: 4px;
-    background: linear-gradient(to bottom, #1ea28a, #5acd9f);
+    background: linear-gradient(to bottom, #19bbbb, #19bbbb);
     transform: translateX(-50%);
     z-index: 1;
 }
@@ -813,14 +813,15 @@ hr.solid {
     left: -30px;
     width: 30px;
     height: 2px;
-    background: #19bb9d;
+    background: #19bbbb;
     box-shadow: inset 6px 6px 0px -6px rgba(255, 255, 255, 0.7),
     inset 0 0 8px 1px rgba(255, 255, 255, 0.7);
 }
 
 
 .timeline-item h3 {
-    color: #19bb9d;
+     color: #515151;
+
     margin-bottom: 15px;
     font-size: 1.4rem;
 }
@@ -890,7 +891,7 @@ hr.solid {
 }
 
 .timeline-dot.active {
-    background: #19bb9d;
+    background: #19bbbb;
     transform: scale(1.3);
     border: white 3px solid;
 }
